@@ -1653,12 +1653,12 @@ PHP_FUNCTION(mb_strpos)
 		}
 	}
 
-	if (offset < 0 || (unsigned long)offset > (unsigned long)mbfl_strlen(&haystack)) {
-		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Offset not contained in string.");
+	if (offset < 0 || offset > mbfl_strlen(&haystack)) {
+		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Offset not contained in string");
 		RETURN_FALSE;
 	}
 	if (needle.len == 0) {
-		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Empty delimiter.");
+		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Empty delimiter");
 		RETURN_FALSE;
 	}
 
@@ -1670,17 +1670,17 @@ PHP_FUNCTION(mb_strpos)
 		case 1:
 			break;
 		case 2:
-			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Needle has not positive length.");
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Needle has not positive length");
 			break;
 		case 4:
-			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Unknown encoding or conversion error.");
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Unknown encoding or conversion error");
 			break;
 		case 8:
-			php_error_docref(NULL TSRMLS_CC, E_NOTICE, "Argument is empty.");
+			php_error_docref(NULL TSRMLS_CC, E_NOTICE, "Argument is empty");
 			break;
 		default:
-			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Unknown error in mb_strpos.");
-			break;			
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Unknown error in mb_strpos");
+			break;
 		}
 		RETVAL_FALSE;
 	}
@@ -1767,10 +1767,13 @@ PHP_FUNCTION(mb_strrpos)
 		RETURN_FALSE;
 	}
 
-	if ((offset > 0 && offset > mbfl_strlen(&haystack)) ||
-		(offset < 0 && -offset > mbfl_strlen(&haystack))) {
-		php_error_docref(NULL TSRMLS_CC, E_NOTICE, "Offset is greater than the length of haystack string");
-		RETURN_FALSE;
+	{
+		int haystack_char_len = mbfl_strlen(&haystack);
+		if ((offset > 0 && offset > haystack_char_len) ||
+			(offset < 0 && -offset > haystack_char_len)) {
+			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Offset is greater than the length of haystack string");
+			RETURN_FALSE;
+		}
 	}
 
 	n = mbfl_strpos(&haystack, &needle, offset, 1);
@@ -1821,10 +1824,6 @@ PHP_FUNCTION(mb_strripos)
 	offset = 0;
 
 	if (zend_parse_parameters(ZEND_NUM_ARGS() TSRMLS_CC, "ss|ls", &old_haystack, &old_haystack_len, &old_needle, &old_needle_len, &offset, &from_encoding, &from_encoding_len ) == FAILURE) {
-		RETURN_FALSE;
-	}
-
-	if(offset > old_haystack_len){
 		RETURN_FALSE;
 	}
 
@@ -1987,7 +1986,7 @@ PHP_FUNCTION(mb_stristr)
 		RETURN_FALSE;
 	}
 
- n = php_mb_stripos(0, haystack.val, haystack.len, needle.val, needle.len, 0, from_encoding TSRMLS_CC);
+	n = php_mb_stripos(0, haystack.val, haystack.len, needle.val, needle.len, 0, from_encoding TSRMLS_CC);
 
 	if (n <0) {
 		RETURN_FALSE;
@@ -4310,9 +4309,21 @@ MBSTRING_API int php_mb_stripos(int mode, char *old_haystack, int old_haystack_l
 			break;
 		}
 
-		if (offset < 0 || (unsigned long)offset > haystack.len) {
-			php_error_docref(NULL TSRMLS_CC, E_WARNING, "Offset not contained in string.");
-			break;
+		{
+			int haystack_char_len = mbfl_strlen(&haystack);
+
+			if (mode) {
+				if ((offset > 0 && offset > haystack_char_len) ||
+					(offset < 0 && -offset > haystack_char_len)) {
+					php_error_docref(NULL TSRMLS_CC, E_WARNING, "Offset is greater than the length of haystack string");
+					break;
+				}
+			} else {
+				if (offset < 0 || offset > haystack_char_len) {
+					php_error_docref(NULL TSRMLS_CC, E_WARNING, "Offset not contained in string");
+					break;
+				}
+			}
 		}
 
 		n = mbfl_strpos(&haystack, &needle, offset, mode);
@@ -4326,7 +4337,7 @@ MBSTRING_API int php_mb_stripos(int mode, char *old_haystack, int old_haystack_l
 		efree(needle.val);
 	}
 
- return n;
+	return n;
 }
 /* }}} */
 
